fix alignment on mobile

--- a/main.css
+++ b/main.css
@@ -131,7 +131,6 @@ body {
     .burger {
         display: block;
         text-align: center;
-        margin-top: 3px;
     }
 
     .links {
